objects/ASI_CRM_IOTHeader__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_ContactNumber__c</fullName>
        <label>Contact Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ContactPerson__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (MY), Wholesaler (MY), Potential Outlet (MY)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>IOT_Headers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ExpectedDeliveryDate__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_EmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IOT Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_IOTConfirm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm to Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (MY), Wholesaler (MY), Potential Outlet (MY)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>IOT_Headers1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Indirect Order Taking Header</label>
    <listViews>
        <fullName>All_MY_IOT</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_MY_EmailSent__c</columns>
        <columns>ASI_CRM_MY_IOTConfirm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_IOTHeader__c.ASI_CRM_MY_IOTHeader</value>
        </filters>
        <label>All_MY_IOT</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IH-{00000000}</displayFormat>
        <label>IOT Header ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indirect Order Taking Headers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_IOTHeader</fullName>
        <active>true</active>
        <label>ASI CRM MY IOTHeader</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>